Portraits and carousel updated

--- a/src/app/home/portraits/portraits.component.html
+++ b/src/app/home/portraits/portraits.component.html
@@ -9,17 +9,17 @@
 
   <div class="portrait-item">
     <div class="portrait-image">
-      <img src="../../../assets/portraits/mg.png" alt="Father of Nation">
+      <img src="../../../assets/portraits/chairperson.jpg" alt="Chairperson SKVIB">
     </div>
-    <h3 class="portrait-name">Father of Nation</h3>
-    <p class="portrait-title">Mahatma Gandhi</p>
+    <h3 class="portrait-name">Shri Deepak Kumar Gurung</h3>
+    <p class="portrait-title">Hon'ble Chairperson Sikkim Khadi & V.I. Board</p>
   </div>
 
   <div class="portrait-item">
     <div class="portrait-image">
-      <img src="../../../assets/portraits/chairman.png" alt="Chairperson">
+      <img src="../../../assets/portraits/advisor.jpg" alt="Advisor SKVIB">
     </div>
-    <h3 class="portrait-name">Smt. Chung Chung Bhutia</h3>
-    <p class="portrait-title">Hon'ble Chairperson Sikkim Khadi & V.I. Board</p>
+    <h3 class="portrait-name">Shri Dal Bahadur Thatal</h3>
+    <p class="portrait-title">Hon'ble Advisor Sikkim Khadi & V.I. Board</p>
   </div>
 </div>
