--- a/src/app/home/carousel/desk-cl/desk-cl.component.css
+++ b/src/app/home/carousel/desk-cl/desk-cl.component.css
@@ -319,7 +319,7 @@
 }
 
 .category-tag {
-  display: inline-block;
+  display: block;
   color: white;
   font-size: 0.85rem;
   font-weight: 600;
@@ -328,6 +328,9 @@
   background-color: rgba(51, 195, 99, 0.6);
   padding: 0.3rem 0.6rem;
   border-radius: 4px;
+  margin-top: 0.3rem;
+  margin-left: auto;
+  width: fit-content;
 }
 
 /* Responsive design */
